Alignment fix

--- a/src/app/about-me/about-me.component.css
+++ b/src/app/about-me/about-me.component.css
@@ -1,5 +1,5 @@
 .about-me {
-    padding: 60px 20px;
+    padding: 5px 15px;
     text-align: center;
     border-radius: 2%;
     margin: -8px;
@@ -42,14 +42,12 @@
   margin-top: 20px;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1200px) {
   .card-container {
     grid-template-columns: 1fr 1fr; 
     gap: 20px 25px;
   }
 }
-
-
   .card {
     display: flex;
     align-items: center;
@@ -134,7 +132,7 @@
     }
   }
   
-  @media (min-width: 1024px) {
+  @media (min-width: 1200px) {
     .skills-container {
       grid-template-columns: repeat(4, 1fr);
     }
