--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,6 +4,20 @@
   padding: 20px;
   overflow: hidden;
 }
+.right-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  background-color: #181818;
+  color: #fff;
+  min-height: 100vh;
+}
+.page-content {
+  flex: 1;
+  margin-top: 2rem;
+}
+
 
 .profile-card {
   width: 340px;
