--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -18,8 +18,13 @@
   z-index: 1000;
   left: 0;
   right: 0;
-  border-radius: 20px 20px;
   box-shadow: none;
+  top:1px;
+  background-color: #343435;
+  border: 1px solid var(--border);
+}
+.nav-item.active {
+  color: yellow;
 }
 
 .wip-banner {
@@ -65,7 +70,7 @@
 
 .nav-links {
   display: flex;
-  gap: 30px;
+  gap: 40px;
   align-items: center;
   transition: transform 0.5s ease-in-out;
   margin-left: auto;
@@ -79,13 +84,13 @@
   text-decoration: none;
   color: rgba(255, 255, 255, 0.8);
   font-size: 1rem;
-  font-weight: 500;
+  font-weight: 600;
   position: relative; 
   transition: color 0.3s ease-in-out, text-shadow 0.3s ease-in-out;
 }
 
 .nav-item:hover {
-  color: lightgray;
+  color: var(--light-gray-70);
 }
 
 .nav-item::after {
@@ -98,11 +103,6 @@
   background-color: lightgray; 
   transition: width 0.3s ease-in-out;
 }
-
-.nav-item:hover::after {
-  width: 100%; 
-}
-
 
 .hamburger {
   display: none;
@@ -170,9 +170,6 @@
     transition: background 0.3s;
   }
 
-  .nav-item:hover {
-    color: #fff;
-  }
 
   .hamburger {
     display: flex;
